<resources>
    <string name="app_name">P01-DailyGoals</string>
    <string name="selfCheck">Did I achieve this goal today?</string>
    <string name="Qn1">Read Up on materials before class</string>
    <string name="Qn2">Arrive on time so as to not miss important part of the lesson</string>
    <string name="Qn3">Attempt the problem myself</string>
    <string name="reflection">My personal reflection today</string>
    <string name="btn">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>
